docs: 各章の情報セクションに絵文字を追加し、視覚的な強調を向上させる

--- a/docs-site/docs/01_基礎知識.md
+++ b/docs-site/docs/01_基礎知識.md
@@ -1,6 +1,6 @@
 # 01. 基礎知識 - Terraform・Azure・Landing Zones入門 📚
 
-!!! info "この章で学ぶこと" 📝
+!!! info "この章で学ぶこと📝"
     このプロジェクトを理解するために必要な基礎知識を学びます：
 
     1. Terraformって何？
@@ -53,7 +53,7 @@ resource "azurerm_virtual_machine" "example" {
 
 このコードを実行すると、VMが作られます。
 
-!!! success "コードで管理するメリット" ✨
+!!! success "コードで管理するメリット✨"
     - バージョン管理できる（Git）
     - レビューできる
     - 再利用できる
@@ -356,7 +356,7 @@ Microsoftが定義した「企業向けAzure環境のベストプラクティス
 
 いきなりAzureでアプリを作り始めると、こんな問題が起きます：
 
-!!! warning "よくある失敗例" ⚠️
+!!! warning "よくある失敗例⚠️"
     1. **リソースがバラバラ** → 「あのVMどのRGに入れたっけ？」
     2. **セキュリティが甘い** → 「Public IP全開で本番デプロイしちゃった…」
     3. **コストが見えない** → 「今月の請求、なんで500万円！？」
