--- a/docs-site/docs/06_設定ファイル完全解説.md
+++ b/docs-site/docs/06_設定ファイル完全解説.md
@@ -1,6 +1,6 @@
 # 06. 設定ファイル完全解説 - platform-landing-zone.auto.tfvars 📝
 
-!!! 💡 info "この章で学ぶこと"
+!!! info "この章で学ぶこと💡 "
     `platform-landing-zone.auto.tfvars`を完全解説します：
 
     1. テンプレート変数の仕組み（`$${ }`記法）
