--- a/docs-site/docs/07_変数定義.md
+++ b/docs-site/docs/07_変数定義.md
@@ -1,6 +1,6 @@
 # 07. 変数定義 - variables.tfの読み方 🧩
 
-!!! 💡 info "この章で学ぶこと"
+!!! info "この章で学ぶこと💡 "
     `variables.tf`の型定義を完全理解します：
 
     1. 変数定義の3つの要素（型・バリデーション・デフォルト値）
