--- a/docs-site/docs/12_管理リソース.md
+++ b/docs-site/docs/12_管理リソース.md
@@ -1,6 +1,6 @@
 # 12. 管理リソース - Log AnalyticsとDCRの完全解説
 
-!!! info "この章で学ぶこと" 📚
+!!! info "この章で学ぶこと 📚"
     管理リソース（Log Analytics、Data Collection Rules、Managed Identity）の実装を完全に理解します：🛠️
 
     1. 実際の設定ファイル（platform-landing-zone.auto.tfvars）の構造🗂️
