docs: 各セクションのタイトルに絵文字を追加し、視覚的な一貫性を向上させる

--- a/docs-site/docs/01_基礎知識.md
+++ b/docs-site/docs/01_基礎知識.md
@@ -16,7 +16,7 @@
 
 ### 「コードでインフラを作る」とは？
 
-=== "昔のやり方" 🏢
+=== "昔のやり方 🏢"
 
     ```text title="オンプレミス時代"
     1. データセンターに行く
@@ -26,7 +26,7 @@
     5. 設定ファイルを手で編集
     ```
 
-=== "今のやり方（クラウド）" ☁️
+=== "今のやり方（クラウド） ☁️"
 
     ```text title="Azureポータルでの作成"
     1. Azureポータルにログイン
@@ -35,7 +35,7 @@
     4. 「作成」ボタンをクリック
     ```
 
-!!! warning "でも、これって問題がある" ⚠️
+!!! warning "でも、これって問題がある ⚠️"
     - 間違えやすい（入力ミス）
     - 再現できない（どう作ったか忘れる）
     - 時間がかかる（10個作るなら10回やる）
