docsをリニューアル

--- a/docs-site/docs/01_基礎知識.md
+++ b/docs-site/docs/01_基礎知識.md
@@ -149,6 +149,13 @@ Terraformが自動で順序を判断してくれます。
 TerraformはHCL（HashiCorp Configuration Language）で書きます。
 
 #### ブロック構造🧩
+
+terraformのリソース定義は以下の形式が基本です。
+
+リソース定義は「main.tf」というファイルに書くことが多いです。
+
+※「main.vnet.tf」みたいにリソース種類ごとに分けることもあります。
+
 ```hcl title="HCLの基本構造"
 <ブロックタイプ> "<ラベル>" "<名前>" {
   <引数> = <値>
@@ -163,12 +170,17 @@ resource "azurerm_resource_group" "example" {
 }
 ```
 
-- `resource`: リソースを定義
-- `"azurerm_resource_group"`: リソースのタイプ
-- `"example"`: Terraform内での識別名
-- `name`, `location`: 引数
+- `resource`: リソースブロックを定義。リソースを作成することを宣言します。
+- `"azurerm_resource_group"`: リソースのタイプ。リソースグループとかVNetとかいろいろ。
+- `"example"`: Terraform内での識別名。これはTerraformの中だけの名前。
+- `name`, `location`: 引数。ここでリソース名とか、リージョン、設定を入れます。
 
 #### データ型🔢
+
+変数を使えます。マップやリストを使うことで複雑なデプロイ処理を実現します。
+
+変数は「variable.tf」というファイルにまとめることが多いです。
+
 ```hcl
 # 文字列
 name = "my-resource"
@@ -190,6 +202,9 @@ tags = {
 ```
 
 #### 変数参照🔍
+
+変数の参照方法は以下の感じです。var.xxxみたいにして変数を参照します。
+
 ```hcl
 # 変数定義
 variable "location" {
@@ -204,6 +219,11 @@ resource "azurerm_resource_group" "rg" {
 ```
 
 #### 他のリソース参照🔗
+
+リソースブロックで定義したTerraformの中での識別名でその中身を参照できます。
+
+サブネットにどのルートテーブルを紐づけるか指定するためにIDを参照するみたいに使います。
+
 ```hcl
 resource "azurerm_resource_group" "rg" {
   name     = "my-rg"
@@ -352,47 +372,14 @@ Azureの「会社のルール」を強制する仕組み。
 
 Microsoftが定義した「企業向けAzure環境のベストプラクティス」です。
 
-**なぜLanding Zonesが必要なのか？**
-
-いきなりAzureでアプリを作り始めると、こんな問題が起きます：
-
-!!! warning "よくある失敗例⚠️"
-    1. **リソースがバラバラ** → 「あのVMどのRGに入れたっけ？」
-    2. **セキュリティが甘い** → 「Public IP全開で本番デプロイしちゃった…」
-    3. **コストが見えない** → 「今月の請求、なんで500万円！？」
-    4. **権限がめちゃくちゃ** → 「開発者が本番環境を削除できちゃう」
-    5. **監視してない** → 「障害に3日気づかなかった」
-
-Landing Zonesは、こういう問題を最初から防ぐ仕組みです。
-
-#### 飛行機の例で理解しよう✈️
-
-飛行機の例で言うと：
-
-- **滑走路** = Subscription（アプリが動く場所）
-- **管制塔** = Management Groups + Policy（誰が何をしていいか管理）
-- **整備場** = Log Analytics（監視・メンテナンス）
-- **セキュリティゲート** = Firewall（出入り口の検査）
-- **誘導灯** = Private DNS（どこに行けばいいか案内）
-
-全部揃っているから、アプリケーションが「安全に着陸」できる。
-
-**Landing Zonesがないと？**
-
-```
-整備場なし → 故障しても気づかない
-管制塔なし → 誰でも好き勝手に飛べる（危険！）
-セキュリティゲートなし → テロリストも入り放題
-```
-
-怖いですよね。だから最初から「ちゃんとした環境」を作るんです。
+これに沿って作ると、セキュリティ・ガバナンスが強い環境が勝手にできちゃいます！
 
 ---
 
 ### Landing Zonesの8つの設計領域🧩
 
 Microsoftは8つの設計領域を定義しています。  
-このプロジェクトは、**これら全てを実装しています**。
+ランディングゾーンは、**これら全てを実装しています**。
 
 ---
 
@@ -427,7 +414,9 @@ ABC株式会社
 
 **ベストプラクティス**
 
-- テナントは、1社1テナントを強く推奨します。理由は後からテナントをまとめるのがすごく大変だからです。あと、entra ID P2のライセンスが二重でかかったり、DefenderやAzureポリシーのガバナンスが分かれちゃったり。
+- CAFでは、1社1テナントが推奨されています。
+- この理由は後からテナントをまとめるのがすごく大変というのと、entra ID P2のライセンスが二重でかかる、DefenderやAzureポリシーのガバナンスが分かれるなどです。
+- すでにM365を利用している会社でも、同テナントにAzure環境を構築するのが良いです。
 
 ---
 
@@ -463,13 +452,14 @@ ABC株式会社
 - PIMや条件付きアクセス、EntraID Protectionを使う
 - MFA（多要素認証）は必須
 - 定期的にアクセスレビューで権限を棚卸し
-- マネージドIDとRBACによる認証を使う
+- Azureリソースに対する認証はEntraによる認証を使う
 
 ---
 
 #### 3. Resource Organization（リソースの整理）🗂️
 
 **何を決めるか？**
+
 - 管理グループの階層構造
 - サブスクリプションの分け方
 - リソースグループの命名規則
@@ -512,10 +502,11 @@ Root Management Group
 
 **ベストプラクティス**
 
-- 本番、開発などで管理グループを分けないのが推奨構成です。理由は管理グループの階層が深層化し管理が複雑になる上に、本番と開発でガバナンスを分ける効果が薄いため。
-- CAFではサブスクリプションごとに環境を分けるのが推奨です。Microsoftの環境もこうなっているようです。
-
-※サンドボックスは別管理グループに分けます。
+- 命名規則を作る。
+- ランディングゾーン（開発用）は、Corp・Online・Sandboxの3つの管理グループに分ける。
+- 本番、開発などで管理グループを分けない。
+- この理由は管理グループの階層が深層化し管理が複雑になることと、開発環境も本番と同等のガバナンスが必要になることが多いため、ポリシーを分ける効果が薄いことです。
+- TerraformでデプロイしたリソースはTerraformで管理されていることが分かるタグをつける。
 
 
 
@@ -579,14 +570,15 @@ Firewallで一元管理
 
 **ベストプラクティス**
 
-- ERはリージョン冗長で配置
-- HUBもリージョン冗長で配置。それに伴って、AzureFirewall、VPN Gatewayもリージョン冗長で配置することになる。
+- ER回線とER Gatewayをリージョン冗長で配置する。
+- HUBもリージョン冗長で配置する。それに伴って、AzureFirewall、VPN Gatewayもリージョン冗長で配置することになる。
 - アウトバウンドやER向けの通信はAzureFirewallを通す
+- インバウンド通信はHubを通さない。(各Spokeにインバウンドする)
 - すべてのネットワークで、VNETフローログを有効化
-- DNSはHUBに集約し、プライベートエンドポイントのレコード登録を自動化
-- Azure Virtual Network Managerを使用して、NSGの禁止ルールを定義
-- OnlineランディングゾーンのSpokeは会社ネットワークに接続できないよう制限し、利用者が自由にネットワークを設計できるようにする
-- CorpランディングゾーンのSpokeは会社ネットワーク(HUB)に接続するため、ネットワーク設定を管理
+- DNSはHUBに集約し、プライベートエンドポイントのレコード登録を自動化する。
+- Azure Virtual Network Managerを使用して、NSGの禁止ルールを定義する。
+- OnlineランディングゾーンのSpokeは会社ネットワークに接続できないよう制限し、利用者が自由にネットワークを設計できるようにする。
+- CorpランディングゾーンのSpokeは会社ネットワーク(HUB)に接続するため、ネットワーク設定を制限する。
 
 ---
 
@@ -640,9 +632,10 @@ Firewallで一元管理
 
 **ベストプラクティス：**
 
-- 「何も設定しない = 危険」ではなく、「デフォルトで安全」に
-- ポリシーで危険な設定を自動ブロック
 - すべてのサブスクリプションでDefender for Cloudを有効化
+- Defender for Cloudのアラートを有効化
+- ゼロトラストを意識して設計する。
+- ※ゼロトラストはAzureもそうですが、主にEntraID・Microsoft Intune・Defender XDRの設計が重要です。
 
 ---
 
@@ -685,7 +678,10 @@ Log Analytics Workspace
 
 **ベストプラクティス**
 
-- ログは単一のLog Analyticsワークスペースにすべて集約する。理由はSOCやインシデント対応の横断分析のため。
+- ログは単一のLog Analyticsワークスペースにすべて集約する。
+- この理由はSOCやインシデント対応の際の横断分析のためと、Microsoft Sentinelと連携するため。
+- ※Microsoft SentinelとDefenderポータルは単一のLog Analyticsワークスペースにしか接続できません。
+- GitHubでインフラ更新のすべての履歴が残るように管理
 
 **よくある運用シナリオ：**
 
@@ -762,6 +758,12 @@ Log Analytics Workspace
 - 管理グループにポリシーを適用（配下全てに適用）
 - Terraformでタグを自動付与
 
+**ベストプラクティス**
+
+- ランディングゾーンアーキテクチャを使って初期のポリシー群を活用
+- この理由はランディングゾーンのポリシーは、かなり念入りに設計されていて、これを実装するだけでもランディングゾーンを使う価値がかなり高い。
+- ※ランディングゾーンを使う目的はポリシーのためだと言っても過言ではない。
+
 ---
 
 #### 8. Platform Automation and DevOps（自動化）🤖
@@ -813,6 +815,14 @@ Log Analytics Workspace
 - 履歴が残る（いつ誰が何を変更したか）
 - ロールバック簡単（Gitで戻すだけ）
 
+**ベストプラクティス**
+
+- GitHubを使用して、すべての更新履歴を追跡できるように管理する。
+- インフラの更新はコード更新→承認→自動テスト→自動デプロイというフローにすべて従う。
+- 運用作業もコードで定義し、自動化する（コードがパラメーターファイルの代わりになる。）
+- mainブランチを保護し、承認無しでインフラが更新されないようにする。
+- AzureポータルやAzure CLIでの設定変更をしない。GitHub Actionsで手動更新を定期的に検知する。
+
 ---
 
 ### このプロジェクトは「8つ全部」実装している
@@ -851,7 +861,7 @@ Log Analytics Workspace
 これの問題：
 
 - 人によって解釈が違う
-- 手順書が古くなる
+- 手順書が古くなる（特にクラウドはすぐ変わる）
 - ミスが起きる
 - 再現が大変
 
@@ -904,6 +914,9 @@ GitにpushしたらFull自動でデプロイ。
 
 コード自体がドキュメント。  
 「どう作ったか」が明確。
+パラメーターシートを作らなくていい。
+Document as Code = 設計書などのDocumentもGitHubで管理するのはおすすめ。
+※Microsoftの公式ドキュメントなどはGitHubで管理されてます。
 
 ---
 
@@ -973,7 +986,7 @@ terraform {
 required_version = "~> 1.12"
 ```
 
-「Terraform 1.12以上じゃないと動かないよ」という宣言。  
+「Terraform 1.12じゃないと動かないよ」という宣言。  
 `~> 1.12`は「1.12.x」のこと。1.13や2.0はNG。
 
 #### required_providers📦
@@ -981,7 +994,7 @@ required_version = "~> 1.12"
 使うプロバイダー（AzureとかAWSとか）を宣言。
 
 **alz**: Azure Landing Zones専用プロバイダー  
-**azurerm**: Azure Resource Manager（Azureのメインプロバイダー）  
+**azurerm**: Azure Resource Manager（Azureのメインプロバイダー。ほとんどこれ。）  
 **azapi**: Azure API直接叩く用（azurermでできないことに使う）  
 **local**: ローカルファイル操作用
 
