--- a/docs-site/docs/05_プロジェクト構造.md
+++ b/docs-site/docs/05_プロジェクト構造.md
@@ -5,8 +5,13 @@
     
 
 この章以降で、実践編で作ったランディングゾーンの詳細を解明していきます。
+
 複雑なだけあって、理解するところが多いですがこれを理解すれば、様々な技術の面で勉強になります。
-ぜひ理解していってください。
+ぜひ頑張ってみてください。
+
+ちなみにこの章以降はオタク向けです🤓
+
+![alt text](./img/image59.png)
 
 ※ここからは実践編で作成したリポジトリを開きながら見ていきましょう。
 
